; ModuleID = '/home/carl/AnghaBench/reactos/base/applications/kbswitch/extr_kbswitch.c_GetLayoutID.c'
source_filename = "/home/carl/AnghaBench/reactos/base/applications/kbswitch/extr_kbswitch.c_GetLayoutID.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@CCH_LAYOUT_ID = common dso_local global i32 0, align 4
@HKEY_CURRENT_USER = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [24 x i8] c"Keyboard Layout\\Preload\00", align 1
@KEY_QUERY_VALUE = common dso_local global i32 0, align 4
@ERROR_SUCCESS = common dso_local global i64 0, align 8
@FALSE = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [28 x i8] c"Keyboard Layout\\Substitutes\00", align 1
@TRUE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32*, i32)* @GetLayoutID to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @GetLayoutID(i32* %0, i32* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i64, align 8
  %9 = alloca i64, align 8
  %10 = alloca i32, align 4
  %11 = alloca i8*, align 8
  %12 = alloca i64, align 8
  %13 = alloca i32, align 4
  store i32* %0, i32** %5, align 8
  store i32* %1, i32** %6, align 8
  store i32 %2, i32* %7, align 4
  %14 = load i32, i32* @CCH_LAYOUT_ID, align 4
  %15 = add nsw i32 %14, 1
  %16 = zext i32 %15 to i64
  %17 = call i8* @llvm.stacksave()
  store i8* %17, i8** %11, align 8
  %18 = alloca i32, i64 %16, align 16
  store i64 %16, i64* %12, align 8
  %19 = load i32, i32* @HKEY_CURRENT_USER, align 4
  %20 = call i32 @_T(i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str, i64 0, i64 0))
  %21 = load i32, i32* @KEY_QUERY_VALUE, align 4
  %22 = call i64 @RegOpenKeyEx(i32 %19, i32 %20, i32 0, i32 %21, i32* %10)
  %23 = load i64, i64* @ERROR_SUCCESS, align 8
  %24 = icmp eq i64 %22, %23
  br i1 %24, label %25, label %41

25:                                               ; preds = %3
  %26 = mul nuw i64 4, %16
  store i64 %26, i64* %8, align 8
  %27 = load i32, i32* %10, align 4
  %28 = load i32*, i32** %5, align 8
  %29 = ptrtoint i32* %18 to i32
  %30 = call i64 @RegQueryValueEx(i32 %27, i32* %28, i32* null, i32* null, i32 %29, i64* %8)
  store i64 %30, i64* %9, align 8
  %31 = load i64, i64* %9, align 8
  %32 = load i64, i64* @ERROR_SUCCESS, align 8
  %33 = icmp ne i64 %31, %32
  br i1 %33, label %34, label %38

34:                                               ; preds = %25
  %35 = load i32, i32* %10, align 4
  %36 = call i32 @RegCloseKey(i32 %35)
  %37 = load i32, i32* @FALSE, align 4
  store i32 %37, i32* %4, align 4
  store i32 1, i32* %13, align 4
  br label %69

38:                                               ; preds = %25
  %39 = load i32, i32* %10, align 4
  %40 = call i32 @RegCloseKey(i32 %39)
  br label %41

41:                                               ; preds = %38, %3
  %42 = load i32, i32* @HKEY_CURRENT_USER, align 4
  %43 = call i32 @_T(i8* getelementptr inbounds ([28 x i8], [28 x i8]* @.str.1, i64 0, i64 0))
  %44 = load i32, i32* @KEY_QUERY_VALUE, align 4
  %45 = call i64 @RegOpenKeyEx(i32 %42, i32 %43, i32 0, i32 %44, i32* %10)
  %46 = load i64, i64* @ERROR_SUCCESS, align 8
  %47 = icmp eq i64 %45, %46
  br i1 %47, label %48, label %63

48:                                               ; preds = %41
  %49 = mul nuw i64 4, %16
  store i64 %49, i64* %8, align 8
  %50 = load i32, i32* %10, align 4
  %51 = load i32*, i32** %6, align 8
  %52 = ptrtoint i32* %51 to i32
  %53 = call i64 @RegQueryValueEx(i32 %50, i32* %18, i32* null, i32* null, i32 %52, i64* %8)
  %54 = load i64, i64* @ERROR_SUCCESS, align 8
  %55 = icmp ne i64 %53, %54
  br i1 %55, label %56, label %60

56:                                               ; preds = %48
  %57 = load i32*, i32** %6, align 8
  %58 = load i32, i32* %7, align 4
  %59 = call i32 @StringCchCopy(i32* %57, i32 %58, i32* %18)
  br label %60

60:                                               ; preds = %56, %48
  %61 = load i32, i32* %10, align 4
  %62 = call i32 @RegCloseKey(i32 %61)
  br label %67

63:                                               ; preds = %41
  %64 = load i32*, i32** %6, align 8
  %65 = load i32, i32* %7, align 4
  %66 = call i32 @StringCchCopy(i32* %64, i32 %65, i32* %18)
  br label %67

67:                                               ; preds = %63, %60
  %68 = load i32, i32* @TRUE, align 4
  store i32 %68, i32* %4, align 4
  store i32 1, i32* %13, align 4
  br label %69

69:                                               ; preds = %67, %34
  %70 = load i8*, i8** %11, align 8
  call void @llvm.stackrestore(i8* %70)
  %71 = load i32, i32* %4, align 4
  ret i32 %71
}

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #1

declare dso_local i64 @RegOpenKeyEx(i32, i32, i32, i32, i32*) #2

declare dso_local i32 @_T(i8*) #2

declare dso_local i64 @RegQueryValueEx(i32, i32*, i32*, i32*, i32, i64*) #2

declare dso_local i32 @RegCloseKey(i32) #2

declare dso_local i32 @StringCchCopy(i32*, i32, i32*) #2

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
